--- a/app/index.html
+++ b/app/index.html
@@ -11,22 +11,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="app.css">
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body>
-  <ul class="menu">
-    <li><a href="#/view1">view1</a></li>
-    <li><a href="#/view2">view2</a></li>
-  </ul>
+  <div class='sidebar-wrapper'>
+    <div class='sidebar'>
+      <ul>
+        <a href="#"><li class="brand"><h2>Logo</h2></li></a>
+        <a href="#/view1"><li>Patients <i class="fa fa-bed pull-right"></i></li></a>
+        <a href="#/view2"><li>Clients <i class="fa fa-user-md pull-right"></i></li></a>
+        <a href="#/view2"><li>Test Codes <i class="fa fa-barcode pull-right"></i></li></a>
+        <a href="#/view2"><li>STATS <i class="fa fa-phone pull-right"></i></li></a>
+      </ul>
+    </div>
+  </div>
+
+  <div class='content-wrapper'>
+    <div class='content'>
+      <div ng-view></div>
+
+      <div>Angular seed app: v<span app-version></span></div>
+    </div>
+  </div>
 
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-  <div ng-view></div>
-
-  <div>Angular seed app: v<span app-version></span></div>
+  
 
   <!-- In production use:
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
