--- a/app/index.html
+++ b/app/index.html
@@ -32,9 +32,14 @@
   <div class='content-wrapper'>
     <div class='content'>
       <div ng-view></div>
-
-      <div>Angular seed app: v<span app-version></span></div>
     </div>
+  </div>
+
+  <div class='notes-wrapper' ng-controller="appCtrl as vm" ng-class='vm.note.shown ? "shown" : "notShown"'>
+      <div class='notes'>
+        <p>Notes</p>
+        <textarea focus-on="noteShown" tab-index='0' name="notes" id="notes" cols="30" rows="10" ng-model="vm.note.text"></textarea>
+      </div>
   </div>
 
   <!--[if lt IE 7]>
@@ -49,8 +54,11 @@
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-hotkeys/build/hotkeys.min.js"></script>
+  <script src="bower_components/angular-animate/angular-animate.min.js"></script>
   <script src="app.js"></script>
   <script src="services/patient_service.js"></script>
+  <script src="services/focus_service.js"></script>
+  <script src="components/focus/focus_directive.js"></script>
   <script src="view1/view1.js"></script>
   <script src="view2/view2.js"></script>
   <script src="home/home.js"></script>
