--- a/app/patients_list/patients_list.html
+++ b/app/patients_list/patients_list.html
@@ -1,3 +1,46 @@
-<div ng-show="vm.table" ng-repeat="patient in vm.patients">
+<h1><i class="fa fa-bed"> Patients</i></h1>
+<hr>
+<form class='form-horizontal'>
+<div class='col-md-6'>
+	<div class='form-group'>
+		<label class='control-label col-sm-3' for='fname'>First Name</label>
+		<div class='col-sm-9'>
+			<input class='form-control' focus-on='main' type='text' name='fname'>
+		</div>
+	</div>
+	<div class='form-group'>
+		<label class='control-label col-sm-3' for='lname'>Last Name</label>
+		<div class='col-sm-9'>
+			<input class='form-control' type='text' name='lname'>
+		</div>
+	</div>
+	<div class='form-group'>
+		<label class='control-label col-sm-3' for='dob'>D.O.B.</label>
+		<div class='col-sm-9'>
+			<input class='form-control' type='date' name='dob'>
+		</div>
+	</div>
+	<div class='form-group'>
+		<div class='col-sm-9 col-sm-offset-3'>
+			<button type="submit" class="btn btn-primary col-sm-12">Search</button>
+		</div>
+	</div>
+</div>
+<div class='col-md-6'>
+	<div class='form-group'>
+		<label class='control-label col-sm-3' for='start'>Start Date</label>
+		<div class='col-sm-9'>
+			<input class='form-control' type='date' name='start'>
+		</div>
+	</div>
+	<div class='form-group'>
+		<label class='control-label col-sm-3' for='end'>Start Date</label>
+		<div class='col-sm-9'>
+			<input class='form-control' type='date' name='end'>
+		</div>
+	</div>
+</div>
+</form>
+<div class='col-md-12' ng-show="vm.table" ng-repeat="patient in vm.patients">
 	First Name: {{patient.fname}}
 </div>
