added tab indexes for patient search form

--- a/app/patients_list/patients_list.html
+++ b/app/patients_list/patients_list.html
@@ -5,24 +5,24 @@
 	<div class='form-group'>
 		<label class='control-label col-sm-3' for='fname'>First Name</label>
 		<div class='col-sm-9'>
-			<input class='form-control' focus-on='main' type='text' name='fname'>
+			<input class='form-control' focus-on='main' type='text' name='fname' tabindex='1'>
 		</div>
 	</div>
 	<div class='form-group'>
 		<label class='control-label col-sm-3' for='lname'>Last Name</label>
 		<div class='col-sm-9'>
-			<input class='form-control' type='text' name='lname'>
+			<input class='form-control' type='text' name='lname' tabindex='2'>
 		</div>
 	</div>
 	<div class='form-group'>
 		<label class='control-label col-sm-3' for='dob'>D.O.B.</label>
 		<div class='col-sm-9'>
-			<input class='form-control' type='date' name='dob'>
+			<input class='form-control' type='date' name='dob' tabindex='3'>
 		</div>
 	</div>
 	<div class='form-group'>
 		<div class='col-sm-9 col-sm-offset-3'>
-			<button type="submit" class="btn btn-primary col-sm-12">Search</button>
+			<button type="submit" class="btn btn-primary col-sm-12" tabindex='6'>Search</button>
 		</div>
 	</div>
 </div>
@@ -30,13 +30,13 @@
 	<div class='form-group'>
 		<label class='control-label col-sm-3' for='start'>Start Date</label>
 		<div class='col-sm-9'>
-			<input class='form-control' type='date' name='start'>
+			<input class='form-control' type='date' name='start' tabindex='4'>
 		</div>
 	</div>
 	<div class='form-group'>
 		<label class='control-label col-sm-3' for='end'>Start Date</label>
 		<div class='col-sm-9'>
-			<input class='form-control' type='date' name='end'>
+			<input class='form-control' type='date' name='end' tabindex='5'>
 		</div>
 	</div>
 </div>
