--- a/app/patients_list/patients_list.html
+++ b/app/patients_list/patients_list.html
@@ -22,7 +22,7 @@
 	</div>
 	<div class='form-group'>
 		<div class='col-sm-9 col-sm-offset-3'>
-			<button type="submit" class="btn btn-primary col-sm-12" tabindex='6'>Search</button>
+			<button type="submit" class="btn btn-primary col-sm-12" tabindex='6' ng-click="vm.getPatients()">Search</button>
 		</div>
 	</div>
 </div>
@@ -41,6 +41,24 @@
 	</div>
 </div>
 </form>
-<div class='col-md-12' ng-show="vm.table" ng-repeat="patient in vm.patients">
-	First Name: {{patient.fname}}
+<div class='col-md-8 search-results' ng-show="vm.patients.length > 0">
+	<h3>Search results:</h3>
+	<div class="table-responsive">
+		<table class="table table-hover">
+			<tr>
+				<th>Accession</th>
+				<th>First Name</th>
+				<th>Last Name</th>
+				<th>DOB</th>
+				<th>Collection Date</th>
+			</tr>
+			<tr ng-repeat="patient in vm.patients">
+				<td><a href="#/patient-details/{{patient.accn}}">{{patient.accn}}</a></td>
+				<td>{{patient.fname}}</td>
+				<td>{{patient.lname}}</td>
+				<td>{{patient.dob}}</td>
+				<td>{{patient.coll}}</td>
+			</tr>
+		</table>
+	</div>
 </div>
